# flutter_app

./: .gitignore  pubspec.yaml
.cargo/: config.toml
android/app/: build.gradle.kts
android/app/src/main/kotlin/com/yourcompany/endelclone/: MainActivity.kt  NativeBridge.kt
assets/presets/: calm.json  focus.json  relax.json  sleep.json
docs/: iOS_AudioSession.swift
engine/: Cargo.toml
engine/audio_engine/: Cargo.toml  cbindgen.toml  debug_linker.sh  linker_wrapper.sh
engine/audio_engine/.cargo/: config.toml
engine/audio_engine/oboe/: local.properties
engine/audio_engine/src/: lib.rs
engine/scripts/: build_android.sh  build_desktop.sh  build_ios.engine_sh
engine/src/: lib.rs
lib/: audio_engine.dart  main.dart
lib/screens/: home_screen.dart  session_screen.dart
lib/services/: audio_service.dart  audio_test.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: build-android.ps1  build-windows.ps1
test/: widget_test.dart
web/: index.html
windows/runner/: Runner.rc
