[package]
name = "soundcore"
version = "0.1.0"
edition = "2021"

[lib]
# Compile this crate as a C-compatible dynamic library.  
# Android and Windows will load the resulting lib via Dart FFI.
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
