[package]
name = "soundcore"
version = "0.1.0"
edition = "2021"

[lib]
# Compile this crate as a C-compatible dynamic library.  
# Android and Windows will load the resulting lib via Dart FFI.
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
oboe = "0.6"   # Rust bindings to Android Oboe/AAudio

[dependencies]
jni = "0.21"
once_cell = "1.19"
log = "0.4"
android_logger = "0.13"
